--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,14 @@
 {
-    "name": "webdevstudios/cmb2-attached-posts",
+    "name": "cmb2/cmb2-attached-posts",
     "description": "Custom field for CMB2 for creating post relationships.",
     "license": "GPL-2.0+",
     "authors": [
+        {
+            "name": "Justin Sternberg",
+            "email": "justin@dsgnwrks.pro",
+            "homepage": "https://dsgnwrks.pro",
+            "role": "Developer"
+        },        
         {
             "name": "WebDevStudios",
             "email": "contact@webdevstudios.com",
@@ -11,11 +17,11 @@
         }
     ],
     "keywords": ["wordpress", "plugin", "metabox","post","relationship","attached"],
-    "homepage": "https://github.com/WebDevStudios/CMB2",
+    "homepage": "https://github.com/CMB2/CMB2",
     "type": "wordpress-plugin",
     "support": {
-        "issues": "https://github.com/WebDevStudios/cmb2-attached-posts/issues",
-        "source": "https://github.com/WebDevStudios/cmb2-attached-posts/"
+        "issues": "https://github.com/CMB2/cmb2-attached-posts/issues",
+        "source": "https://github.com/CMB2/cmb2-attached-posts/"
     },
     "require": {
         "php": ">5.2.4"
