--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "cmb2/cmb2-attached-posts",
     "description": "Custom field for CMB2 for creating post relationships.",
     "license": "GPL-2.0+",
+    "minimum-stability": "dev",
     "authors": [
         {
             "name": "Justin Sternberg",
